# odin-level0-lambda

./: .gitignore  Dockerfile  README.md  app.py  cdk.context.json  cdk.json  pyproject.toml  requirements.in  requirements.txt  resend_stw_prefix.py  tox.ini
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml  copilot-setup-steps.yml
level0/activate_l0/handler/: activate_l0_handler.py
level0/activate_l0_handler/: handler.py
level0/activiate_l0_handler/: handler.py
level0/handlers/: attitude.py  handler.py  import_level0.py
level0/import_l0/: Dockerfile  requirements.in  requirements.txt
level0/import_l0/handler/: attitude.py  import_l0_handler.py  import_level0.py  level0.py
level0/import_l0_handler/: handler.py  import_level0.py
level0/notify_l1/handler/: notify_l1_handler.py
level0/notify_l1_handler/: handler.py
stacks/: level0_stack.py
tests/level0/handler/: test_activate_l0_handler.py  test_import_level0.py
